--- a/Inventory Optimization Analysis for Mint Classics (SQL Project)/README
+++ b/Inventory Optimization Analysis for Mint Classics (SQL Project)/README
@@ -47,7 +47,7 @@ My role was to analyze a **relational SQL database** provided by the company and
 4. Analyzed the data using SELECT, JOINs, GROUP BY, HAVING, and filtering clauses.
 5. Summarized findings and compiled recommendations.
 
-[SQL Queries]
+[SQL Queries](https://github.com/madhurima2902/Business-Analytics-Portfolio/blob/main/Inventory%20Optimization%20Analysis%20for%20Mint%20Classics%20(SQL%20Project)/SQL%20Queries.sql)
 
 ## Insights & Recommendations
 
